--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,8 +15,12 @@
     "@mui/icons-material": "^7.0.1",
     "@mui/material": "^7.0.1",
     "axios": "^1.8.4",
+    "chart.js": "^4.4.9",
+    "leaflet": "^1.9.4",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
+    "react-leaflet": "^5.0.0",
     "react-router": "^7.5.2"
   },
   "devDependencies": {
