--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,11 +21,11 @@
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-leaflet": "^5.0.0",
-    "react-router": "^7.5.2",
-    "react-simple-maps": "^3.0.0"
+    "react-router": "^7.5.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
+    "@types/leaflet": "^1.9.18",
     "@types/react": "^19.1.0",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.3.4",
